# wecs

./: Cargo.toml  README.md
crates/wecs-core/: Cargo.toml
crates/wecs-core/src/: lib.rs
crates/wecs-core/src/archetype/: archetype.rs  mod.rs
crates/wecs-core/src/component/: component.rs
crates/wecs-core/src/entity/: entity.rs  entity_ref.rs  mod.rs
crates/wecs-core/src/query/: mod.rs  query.rs  query_component.rs
crates/wecs-core/src/resource/: mod.rs  param.rs  resource.rs
crates/wecs-core/src/schedule/: mod.rs  schedule.rs
crates/wecs-core/src/storage/: table.rs
crates/wecs-core/src/system/: function_system.rs  mod.rs  system.rs  system_param.rs
crates/wecs-core/src/world/: mod.rs  param.rs  unsafe_world_cell.rs  world.rs
crates/wecs-derive/: Cargo.toml
crates/wecs-derive/src/: lib.rs
crates/wecs-events/: Cargo.toml
crates/wecs-events/src/: event_manager.rs  event_reader.rs  event_writer.rs  lib.rs
src/: lib.rs
